# sankey-report

./: CLAUDE.md  Makefile  README.md  budget.csv  business_flow.csv  energy.csv  main.py  pyproject.toml  sample_sankey_data.csv  uwg-wahlkampf.csv
