[project]
name = "senkey-report"
version = "0.1.0"
description = "A Python application for creating beautiful interactive Sankey diagrams from CSV data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "plotly>=5.0.0",
    "pandas>=2.0.0",
    "kaleido>=0.2.1",
]

[dependency-groups]
dev = [
    "ruff>=0.13.1",
]
